added creator survey for details page